src/components/styles.css
@font-face {
  font-family: "Inter";
  src: url("./../fonts/static/Inter-ExtraLight.ttf");
  font-weight: 100;
}
@font-face {
  font-family: "Inter";
  src: url("./../fonts/static/Inter-Medium.ttf");
  font-weight: normal;
}

@font-face {
  font-family: "Inter";
  src: url("./../fonts/static/Inter-Medium.ttf");
  font-weight: 400;
}

@font-face {
  font-family: "Inter";
  src: url("./../fonts/static/Inter-Bold.ttf");
  font-weight: bold;
}
/* GLOBAL */
p {
  font-family: "Inter", sans-serif;
  font-size: 1.2rem;
}
a {
  text-decoration: none;
  color: white;
}

button {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 16px 20px;
  gap: 24px;
  background-color: black;
  color: white;
  width: 7rem;
  height: 3rem;
  border: 1px solid #ffffff;
  border-radius: 80px;
}
button:hover {
  cursor: pointer;
}

/* HEADER */

.header {
  background-color: black;
  color: grey;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.header-left {
  display: flex;
  align-items: center;
  padding-left: 7rem;
}
.header-right {
  padding-right: 2rem;
}

.logo,
.graphic {
  margin-right: 1rem;
}

.date {
  font-size: 1rem;
}

/* WELCOME */
.welcome-container {
  position: relative;
  display: flex;
  justify-content: flex-end;
}

.welcome-text-container {
  position: absolute;
  left: 0;
  z-index: 2;
}

.welcome-image-container {
  z-index: 1;
  display: flex;
  justify-content: right;
}

.welcome-image {
  width: 40rem;
  display: block;
}
.welcome-second-container {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 50%;
  padding-top: 10rem;
  padding-bottom: 5rem;
  color: white;
  justify-content: space-around;
}
.welcome-second-container-left {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.welcome-second-container-right {
  width: 30%;
  display: flex;
  justify-content: right;
  padding-right: 5rem;
}

/* FOOTER */
.footer {
  background-color: white;
  color: black;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  max-width: 1400px;
  padding-left: 5rem;
  padding-right: 5rem;
  padding-bottom: 1rem;
}

.footer-top {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.footer-header {
  font-family: "Inter", sans-serif;
  color: #e5e548;
  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black,
    1px 1px 0 black;
  font-style: normal;
  font-weight: 700;
  font-size: 6rem;
  line-height: 100%;
  display: flex;
  align-items: center;
  text-transform: uppercase;
  position: relative;
  background: transparent;
}

.contact-us-container {
  display: flex;
  align-items: center;
}

.contact-us {
  background-color: grey;
  border-width: 0px;
  border-radius: 50%;
  padding: 20px;
  font-weight: bold;
  width: 120px;
  height: 120px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.footer-middle {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-top: 20px;
}

.column {
  display: flex;
  flex-direction: column;
}
.column p {
  line-height: 0.8;
  font-weight: 400;
  letter-spacing: 1px;
}

.footer-bottom {
  display: flex;
  justify-content: space-between;
  width: 50%;
  margin-top: 20px;
}

.footer a {
  color: inherit;
  text-decoration: none;
  display: block;
}

.footer a:hover,
.footer a:focus,
.footer a:active {
  color: inherit;
  text-decoration: none;
}

.column {
  display: flex;
  flex-direction: column;
  line-height: 1.5;
}

.column p {
  margin: 0;
  margin-bottom: 0.75em;
}

.column p:last-child {
  margin-bottom: 1rem;
}

/* YOUTUBEVIDEO */
.video-wrapper {
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
}

.video-container {
  position: relative;
  height: 0;

  padding-top: 56.25%; /* 16:9 Aspect Ratio */
}

.video-iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* LATEST PROJECTS */

.latest-projects-container {
  display: flex;
  flex-direction: column;
  padding-top: 3rem;
  padding-bottom: 3rem;
}
.cards-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding-bottom: 5rem;
}

/* PROJECT */
.card {
  max-width: 550px;
  margin: 1rem;
}

.card-image-container {
  position: relative;
  z-index: 1;
}

.card-image {
  position: relative;
  border-radius: 16px;
  width: 35rem;
  height: 25.5rem;
  display: flex;
  justify-content: center;
  overflow: hidden;
}

.card-image img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
  min-width: 35rem;
  border-radius: 16px;
}

.index-number {
  position: absolute;
  left: 0;
  bottom: 40px;
  font-size: 10.5rem;
  transform: rotate(270deg);
  color: white;
  font-weight: 100;
  color: transparent;
  -webkit-text-stroke: 1px #ffffff; /* for WebKit browsers */
  text-stroke: 1px #ffffff; /* for other browsers */
  font-weight: bold; /* adjust this value to set the desired font weight */
  font-family: sans-serif; /* adjust this value to set the desired font family */
}

.card-title {
  font-size: 1.5rem;
  color: white;
}

.card-description {
  font-size: 1rem;
  color: white;
  padding: 1rem 0;
}

.card-event-production {
  font-size: 1rem;
  color: grey;
}

.card-location {
  display: inline;
  font-size: 1rem;
  color: white;
}

/* SIDE MENU */

/* SideMenu.css */
.menu-button {
  position: fixed;
  top: 16px;
  left: 16px;
  z-index: 1000;
  background: transparent;
  border: none;
  cursor: pointer;
  outline: none;
}

.hamburger,
.hamburger::before,
.hamburger::after {
  content: "";
  display: block;
  width: 32px;
  height: 3px;
  background-color: #000;
  transition: all 0.3s;
}

.hamburger::before,
.hamburger::after {
  position: absolute;
}

.hamburger::before {
  top: -8px;
}

.hamburger::after {
  bottom: -8px;
}

.menu-button.open .hamburger {
  background-color: transparent;
}

.menu-button.open .hamburger::before {
  transform: translateY(8px) rotate(45deg);
}

.menu-button.open .hamburger::after {
  transform: translateY(-8px) rotate(-45deg);
}

.side-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.9);
  z-index: 999;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 1em;
}
.subbar-menu {
  height: 8rem;
  position: fixed;
  bottom: 0;
  right: 0;

  z-index: 10;
}
/* padding-left positions the menu text from left edge */
.menu-links {
  padding-top: 10rem;

  font-size: 4rem;
  line-height: 1.5;
  padding-left: 10rem;
  font-family: "Inter";
  font-weight: bold;
}

.menu-links a,
.menu-links p {
  color: #fff;
  text-decoration: none;
  display: block;
  position: relative;
  margin-bottom: 1rem;
  transition: all 0.3s;
}

.menu-links a:hover,
.menu-links a:focus {
  color: white;
  text-decoration: line-through;
  text-decoration-thickness: 3px;
  text-decoration-color: white;
  transition: all 0.3s;
  color: grey;
}
/* this gives line to the chosen menu up + down */
/*
.menu-links a::before,
.menu-links a::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 3px;
  background-color: white;
  visibility: hidden;
  transform: scaleX(1.5);
  transition: all 0.3s;
}
*/
.menu-links a::before {
  top: 0;
  left: 0;
  transform-origin: left;
}

.menu-links a::after {
  bottom: 0;
  right: 0;

  transform-origin: right;
}

.menu-links a:hover::before,
.menu-links a:hover::after,
.menu-links a:focus::before,
.menu-links a:focus::after {
  visibility: visible;
  transform: scaleX(1);
}

.social-links {
  text-decoration: none;
  color: #fff;
  position: relative;
  padding-right: 20rem;
}
.social-links a:hover,
.social-links a:focus {
  color: white;
  text-decoration: line-through;
  text-decoration-thickness: 1px;
  text-decoration-color: white;
  transition: all 0.3s;
  color: grey;
}

/* responsive styles for mobile */
@media (max-width: 768px) {
  img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
  }

  .header {
    flex-direction: column;
    align-items: flex-start;
    padding-top: 1rem;
    padding-bottom: 10rem;
    width: 100%;
    padding-left: 0px;
    padding-right: 0px;
  }

  .header-right {
    display: none;
  }
  .header-left {
    padding-left: 1.5rem;
    padding-top: 1rem;
  }
  .header-left img {
    height: 1.5rem;
  }

  .footer {
    padding: 0px;
  }
  .footer-top,
  .footer-middle,
  .footer-bottom {
    flex-direction: column;
    align-items: flex-start;
    padding-left: 0px;
    padding-right: 0px;
    width: 100%;
  }
  .footer-top img {
    width: 100vw;
  }

  .welcome-container {
    flex-direction: column;
    justify-content: center;
  }

  .welcome-text-container {
    position: static;
    max-width: 100%;
    display: flex;
    justify-content: center;
    padding-bottom: 20px;
  }

  .welcome-image {
    width: 100%;
  }
  .welcome-second-container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 0px;
  }
  .welcome-second-container-left {
    width: 90%;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-bottom: 2rem;
  }
  .welcome-second-container-right {
    width: 90%;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  .card-image {
    width: auto;
    max-height: 50%;
  }

  .card-image img {
    min-width: auto;
    object-fit: cover;
  }
  .card-text-container {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  .index-number {
    font-size: 6rem;
    bottom: 20px;
  }
  .card {
    width: 100%;
    margin: 0px;
  }

  .card-title {
    font-size: 1rem;
  }

  .cards-container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
  }

  .video-wrapper {
    width: 100%;
    height: auto;
  }
  .menu-links {
    font-size: 2rem;
  }

  .side-menu {
    display: flex;
    flex-direction: column;
    padding: 0px;
  }
  .social-links {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    padding-right: 0rem;
    font-size: 1.5rem;
    width: 100%;
  }
  .menu-button {
    top: 0px;
    left: auto;
    right: 16px;
    height: auto;
    width: auto;
    padding: 0px;
  }

  .menu-links {
    font-size: 2.5rem;
    font-family: "Inter";
    font-weight: bold;
    padding-top: 0px;
    padding-left: 1rem;
  }
  .subbar-menu {
    display: none;
  }
  .contact-us-container button {
    background-color: white;
  }
}
@media (max-height: 800px) {
  .side-menu {
    justify-content: flex-start;
  }
  .menu-links {
    font-size: 2rem;
    padding-bottom: 0px;
  }
  .social-links {
    padding-top: 0px;
  }
  .space-maker {
    display: none;
  }
}

@media (max-height: 600px) {
  .menu-links {
    font-size: 1.5rem;
  }
}

